# subsetter

./: .cz.toml  .gitignore  .ignore  .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml  deny.toml  dprint.json  justfile  pyproject.toml  requirements.txt  subsetter.pyi  subsetter_tool.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: CI.yml  dependency-review.yml  general.yml  links.yml  pre-commit.yml  scheduled-audit.yml  scorecard.yml  typos.yml  validate-licenses.yml
requirements/: ci-requirements.txt  dev-requirements.txt
src/: domain.rs  lib.rs  main.rs
tests/: test_subsetter_tool.py
